--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ vtl_corpus1.0/
 docs/_build/
 create_vtl_corpus/resources/
 create_vtl_corpus/manual_tests/
-create_vtl_corpus/tests/clips/
+tests/clips/
+*.wav
+
