fix some syntax errors in requirements

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,12 +6,12 @@ numpydoc>=1.2
 easydev>=0.9.35
 nbsphinx>=0.8.8
 sphinx-argparse>=0.2.5
-numpy = "1.26.4"
-tqdm = "^4.66.5"
-pandas = "^2.2.3"
-fasttext = "^0.9.3"
-paule = "^0.4.5"
-joblib = "^1.4.2"
-praatio = "^6.2.0"
-librosa = "^0.10.2.post1"
-resampy = "^0.4.3"
+numpy==1.26.4
+tqdm>=4.66.5
+pandas>=2.2.3
+fasttext>=0.9.3
+paule>=0.4.5
+joblib>=1.4.2
+praatio>=6.2.0
+librosa>=0.10.2.post1
+resampy>=0.4.3
