--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ __pycache__/
 bin/targetoptimizer
 vtl_corpus1.0/
 docs/_build/
-create_vtl_corpus/resources/
+create_vtl_corpus/resources/*bin
 create_vtl_corpus/manual_tests/
 tests/clips/
 *.wav
-
+*.swp
+poetry.lock
