--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ vtl_corpus1.0/
 docs/_build/
 create_vtl_corpus/resources/*bin
 create_vtl_corpus/manual_tests/
+create_vtl_corpus/create_corpus_old.py
 tests/clips/
 *.wav
 *.swp
