--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ create_vtl_corpus/resources/*bin
 create_vtl_corpus/manual_tests/
 create_vtl_corpus/create_corpus_old.py
 tests/clips/
+tests/no_phonemes_sr.pkl
+tests/no_phoneme.pkl
 *.wav
 *.swp
 poetry.lock
+*seg
+*ges
