--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,25 @@
 __pycache__/
 bin/targetoptimizer
 vtl_corpus1.0/
-docs/_build/
+
+## resources can be downloaded separately
 create_vtl_corpus/resources/*bin
 create_vtl_corpus/manual_tests/
 create_vtl_corpus/create_corpus_old.py
+
+# this was just for testing
 tests/clips/
 docs/tests/no_phoneme_sr.pkl
 docs/tests/no_phoneme.pkl
 *.wav
 *.swp
-poetry.lock
 *seg
 *ges
-manually_add_mels.py
+
 *csv
 
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
 
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
+documentation
 docs/_build/
 
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
+manually_add_mels.py
