Revert "(Almost) final version (#6)"
This reverts commit 9f2eb01e36ac9613b0cd57454645da56c3415111.

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,10 @@
 __pycache__/
 bin/targetoptimizer
 vtl_corpus1.0/
-
-
-## resources can be downloaded separately
 docs/_build/
-
 create_vtl_corpus/resources/*bin
 create_vtl_corpus/manual_tests/
-create_vtl_corpus/create_corpus_old.py
-
-# this was just for testing
 tests/clips/
-docs/tests/no_phoneme_sr.pkl
-docs/tests/no_phoneme.pkl
 *.wav
 *.swp
-
-*seg
-*ges
-
-*csv
-
-
-documentation
-docs/_build/
-
-
+poetry.lock
