--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ create_vtl_corpus/create_corpus_old.py
 tests/clips/
 docs/tests/no_phoneme_sr.pkl
 docs/tests/no_phoneme.pkl
+create_vtl_corpus/manually_add_mels.py
 *.wav
 *.swp
 
