--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ vtl_corpus1.0/
 
 ## resources can be downloaded separately
 docs/_build/
+dist/
 
 create_vtl_corpus/resources/*bin
 create_vtl_corpus/manual_tests/
